test/fails/bad_types/bad_name2.lgl
void main() {
    int mat3 = 5;
}
